--- a/Frontend/src/components/Employees/EmployeesModal/EmployeeHeader.module.css
+++ b/Frontend/src/components/Employees/EmployeesModal/EmployeeHeader.module.css
@@ -52,10 +52,13 @@
     align-items: center;
     position: absolute; 
     right: 24px;
+    top: 8px;
 }
 
 .actionItem {
     position: relative;
+    display: flex;      
+    align-items: center;
 }
 
 .btn {
