--- a/Frontend/src/styles/ClientsPage.css
+++ b/Frontend/src/styles/ClientsPage.css
@@ -17,7 +17,6 @@
 /* ====== Обёртка таблицы ====== */
 .clients-table-wrapper{
   overflow-y: auto;
-  overflow-x: hidden;
 }
 
 /* ====== Таблица ====== */
@@ -27,6 +26,7 @@
   font-size: 14px;
   text-align: left;
   table-layout: fixed;
+  overflow-x: auto;
 }
 
 
@@ -67,30 +67,43 @@
 }
 
 /* ====== Группы ====== */
-.group-row{
+.group-header {
   cursor: pointer;
   user-select: none;
   opacity: 0.9;
 }
-.group-row td{
-  color: #FFFFFF;
-  font-size: var(--font-size-table-header);
-  font-weight: normal;
-  padding: 8px 15px;
-  border: none;
-  background-color: var(--bg-color);
+
+
+.group-header td {
+  background-color: var(--bg-color); 
+  font-weight: bold;
+  color: #a0a0b0;
+  padding: 12px 16px;
+  font-size: 12px;
+  border-bottom: 1px solid var(--border--color); 
+  border-right: none;
 }
 
+.collapse-icon {
+  display: inline-block;
+  margin-right: 12px;
+  transition: transform 0.2s ease-in-out;
+}
 
-/* счётчик групп */
-.group-count{
+.collapse-icon.collapsed {
+  transform: rotate(-90deg);
+}
+
+.group-count {
   margin-left: 8px;
   padding: 2px 6px;
   background-color: #444;
-  color: #fff;
+  color: #a0a0b0;
   border-radius: 4px;
   font-size: 12px;
+  font-weight: normal;
 }
+
 
 /* ====== Утилиты ====== */
 .ellipsis{
