--- a/Frontend/src/styles/ExecutorModal.css
+++ b/Frontend/src/styles/ExecutorModal.css
@@ -326,3 +326,7 @@
 .checkbox-container-modal .form-field-checkbox:nth-child(2){
   gap: 63px;
 }
+
+.checkbox-container-modal .form-field-checkbox:nth-child(3){
+  gap: 97px;
+}
